Update SearchTabPresenter.java